# DBM

./: .gitignore  .gitmodules  D3_Full.sh  My_train_rgb_flow.py  README.md  Strain1.py  aggregate_results.py  aggregator.py  data_preprocess_protocol.py  data_preprocess_video.py  data_process.py  environment.dbm.yml  eval.py  flow_preprocess_hdf5.py  flow_train_intox_fixed.py  my_train.sh  my_train_flow_only_long_eval_opt_protocol.py  my_train_multimodal_protocol.py  optic_flow_find.py  pyproject.toml  run_all.sh  run_experiments.py  setup.py  slurm_train_folds.sh  train copy.py
Backup_scripts/: My_train.py  My_train_with_rgb.py  my_train_flow_only_long_eval.py  my_train_flow_only_long_eval_opt.py  my_train_flow_only_long_eval_opt_protocol.py
Visualizations/: visualize.py
analysis/: feature_test.py  itsc25.py
data/: README.md  dbm_dataset.py  download_processed_dataset.py  utils.py
exp/: example.txt
features/: README.md  feature_sets.py  gaze_features.py  generate_derived_cam_front_features.py  generate_derived_gaze_depth_features.py  generate_derived_gaze_entropy_features.py  generate_derived_gaze_fixation_features.py  generate_derived_gaze_pitch_yaw_features.py  generate_derived_gaze_semantic_features.py  generate_derived_relevant_trajectories.py  generate_derived_steering_features.py  generate_derived_track_features.py  output_writer.py  shrink_video.py  track_features.py
flow_only_models_protocol_new/: training_log.txt
hail-datasets/: .gitattributes  .gitignore  .pre-commit-config.yaml
models/: model_base.py  model_factory.py  models_all.py  (+2 more)
(+48 files in other folders)
